0030811: Data Exchange, RWGltf_CafReader - fix inaccessibility of properties

Added missing Standard_EXPORT and getters.
Fixed metadata loss.